--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "ant-design-vue": "^1.7.4",
@@ -18,5 +19,8 @@
   },
   "browser": {
     "image-size": false
+  },
+  "devDependencies": {
+    "push-dir": "^0.4.1"
   }
 }
